--- a/小鹤双拼薄荷定制_配置.md
+++ b/小鹤双拼薄荷定制_配置.md
@@ -2,7 +2,7 @@
 
 ---
 
-## 📌 1. 基本信息（schema 标头）
+## 📌 基本信息（schema 标头）
 
 ```yaml
 schema:
@@ -10,35 +10,37 @@ schema:
   name: "小鹤双拼-薄荷定制"
   version: "24.10.02"
 ```
-
-- 定义方案 ID、名称和版本。
 - `schema_id` 是这个方案在 `Rime` 内部的唯一识别名，对应 `.schema.yaml` 文件名。
 
 ---
 
-## 📦 2. dependencies：模块/词库依赖
+## 📦 dependencies：模块/词库依赖
 
 ```yaml
 dependencies:
   - radical_pinyin_flypy
-  - wubi98_mint
-  - stroke
   - melt_eng
-  - sogouw
 ```
 
 这些依赖的 `.dict.yaml` 或 `.yaml` 文件必须存在于用户目录中。
 
-需要首先在此模块中添加之后,才可以在translators中声明
+~~需要首先在此模块中添加之后,才可以在translators中声明~~
 
 ```
 translators:
   - table_translator@词库名称
 ```
+词库文件建议在rime_mint.dict.yaml中添加,在输入法配置文件中调用rime_mint
+
+```
+translator:
+  dictionary: rime_mint
+  prism: double_pinyin_flypy
+```
 
 ---
 
-## 🧲 3. switches：状态开关切换项
+## 🧲 switches：状态开关切换项
 
 ```yaml
 switches:
@@ -53,7 +55,7 @@ switches:
 
 ---
 
-## 🧠 4. engine：处理器模块
+## 🧠 engine：处理器模块
 
 ```yaml
 engine:
@@ -76,37 +78,7 @@ engine:
 
 ---
 
-## ✨ 5. translators：翻译器列表（拼音转词）
-
-```yaml
-translators:
-  - punct_translator
-  - script_translator
-  - lua_translator@*...
-  - table_translator@melt_eng
-  - table_translator@cn_en
-  - table_translator@sogouw
-```
-
-这些按顺序工作，将拼音编码翻译为候选词，包括英文、emoji、计算器等。
-
----
-
-## 🧹 6. filters：候选项后处理模块
-
-```yaml
-filters:
-  - corrector_filter
-  - autocap_filter
-  - simplifier@transcription_cc
-  - auxCode_filter@flypy_full
-  - reduce_english_filter
-  - uniquifier
-```
-
----
-
-## 🔁 7. transcription_cc：简繁转换定义
+## 🔁 transcription_cc：简繁转换定义
 
 ```yaml
 transcription_cc:
@@ -118,7 +90,7 @@ transcription_cc:
 
 ---
 
-## 😀 8. emoji_suggestion：emoji 转换规则
+## 😀 emoji_suggestion：emoji 转换规则
 
 ```yaml
 emoji_suggestion:
@@ -129,7 +101,7 @@ emoji_suggestion:
 
 ---
 
-## 🔤 9. translator 字典设置（核心主词库）
+## 🔤 translator 字典设置（核心主词库）
 
 ```yaml
 translator:
@@ -143,7 +115,7 @@ translator:
 
 ---
 
-## 🅰️ 10. melt_eng / cn_en：英文词库配置
+## 🅰️ melt_eng / cn_en：英文词库配置
 
 ```yaml
 melt_eng:
@@ -155,22 +127,19 @@ melt_eng:
 
 ---
 
-## 🔠 11. speller：拼写处理器（简拼、模糊音）
+## 🔠 speller：拼写处理器（简拼、模糊音）
 
 包含 `algebra` 与 `xlit` 映射，是小鹤音节结构的核心。
 
 ---
 
-## 🀄 12. wubi / stroke / radical：附加输入模式
+## 🀄 radical：附加输入模式
 
-支持五笔、笔画、偏旁反查：
-- 输入 `Uw...` → 五笔；
-- 输入 `Ui...` → 笔画；
 - 输入 `Uu...` → 偏旁拼音。
 
 ---
 
-## 🧮 13. punctuator：标点配置
+## 🧮 punctuator：标点配置
 
 ```yaml
 punctuator:
@@ -178,17 +147,17 @@ punctuator:
     "/": ["、","÷","/",]
 ```
 
-自定义 `/` 显示中文顿号优先，保留除号和斜杠，贴近中文用户习惯。
+自定义 `/` 显示中文顿号优先，保留除号和斜杠
 
 ---
 
-## 🔍 14. recognizer：正则匹配触发器
+## 🔍 recognizer：正则匹配触发器
 
 允许输入 `R123.45` 显示人民币读法，或 `=1+2*3` 调用计算器。
 
 ---
 
-## ⌨️ 15. key_binder：快捷键绑定
+## ⌨️ key_binder：快捷键绑定
 
 ```yaml
 - Control+Shift+E → 切换 emoji 模式  
@@ -200,11 +169,9 @@ punctuator:
 
 ---
 
-## 📜 16. menu：
+## 📜 menu：
 
 ```yaml
 menu:
   page_size: 4
 ```
-
-控制候选项数量（每页显示 4 个候选词）。
